--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body{
     background-color: #1F2937;
     display: flex;
     flex-direction: column;
-    padding-right: 150px;
-    padding-left: 150px;
+    padding-right: 170px;
+    padding-left: 170px;
 }
 
 .header{
@@ -49,10 +49,48 @@ a{
     background-color: #1F2937;
     padding-top: 56px;
     padding-bottom: 120px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
 .p1{
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
+    margin: 0;
+}
+
+.p2{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.first-text{
+    display: flex;
+    flex-direction: column;
+    max-width: 460px;
+    padding-right: 15px;
+}
+
+p{
+    flex-wrap: wrap;
+}
+
+.image1{
+    padding-left: 15px;
+}
+
+button{
+    width: 120px;
+    background-color: #3882F6;
+    border: 0;
+    font-size: 18px;
+    color: #E5E7EB;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-weight: bold;
+    border-radius: 8px;
 }
