--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ button{
     padding-bottom: 5px;
     font-weight: bold;
     border-radius: 8px;
+    height: 36px;
 }
 
 .second-part{
@@ -138,4 +139,64 @@ button{
 .text-box{
     color: #6e6f72;
     
+}
+
+.third-part{
+    background-color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 260px;
+}
+
+.third-text{
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
+}
+
+.third-text .thor{
+    font-size: 24px;
+    font-weight: bold;
+    font-style: normal;
+    text-align: end;
+    padding-right: 50px;
+}
+
+p{
+    margin: 0;
+}
+
+.fourth-part{
+    display: flex;
+    justify-content: center;
+}
+
+.fourth-content{
+    display: flex;
+    width: 890px;
+    background-color: #3882F6;
+    margin: 100px;
+    padding: 50px 100px;
+    border-radius: 8px;
+    justify-content: space-between;
+}
+
+.fourth-title{
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.fourth-p{
+    color: white;
+    font-size: 18px;
+}
+
+.fourth-content button{
+    color: white;
+    border-width: 3px;
+    border-style: solid;
+    height: 42px;
 }
